모든 기능 정상작동

--- a/tistoryapi (1)/index.html
+++ b/tistoryapi (1)/index.html
@@ -35,8 +35,9 @@
     <li>주소 입력 예시 : https://블로그이름.tistory.com/</li>
     <li>등록한 애플리케이션의 App ID와 Secret Key을 복사하여 API 요청 페이지의 "client_id"와 "client_secret" 입력창에 붙여넣습니다.</li>
     <li>"redirect_uri" 입력창에는 Tistory 개발자센터에서 설정한 CallBack URI를 입력합니다.</li>
-    <li>"인증 코드 url로 이동" 버튼을 눌러 Tistory 계정으로 로그인한 후, 인증 코드를 발급받습니다.</li>
-    <li>"인증 코드 url로 이동" 버튼을 눌러 Tistory 계정으로 로그인한 후, 인증 코드를 발급받습니다.</li>
+    <li>"인증 코드 url로 이동" 버튼을 눌러 Tistory 계정으로 로그인한 후, 인증 코드(Authorization Code)를 발급받습니다.</li>
+   <li>https://블로그이름.com/?code=여기가_인증코드&state=anything</li> 
+    <li>발급된 인증 코드는 1시간 이내에만 사용가능하며 재사용 할 수 없습니다.</li>
     
     <li>발급받은 인증 코드를 API 요청 페이지의 "Authorization Code" 입력창에 입력합니다.</li>
     
