--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -3,12 +3,29 @@
 
 <head>
   <title>API 요청 페이지</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="description" content="Tistory API를 이용하여 블로그를 관리하는 페이지입니다.">
+  <meta name="keywords" content="Tistory, API, 블로그, 관리">
+  <meta name="author" content="JaewonYoun">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Tistory API 요청 페이지">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="">
+  <meta property="og:description" content="Tistory API를 이용하여 블로그를 관리하는 페이지입니다.">
+  <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/3522/3522666.png">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Tistory API 요청 페이지">
+  <meta name="twitter:description" content="Tistory API를 이용하여 블로그를 관리하는 페이지입니다.">
+  <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/3522/3522666.png">
  
 </head>
 
 <body>
-  <h1>API 요청 페이지</h1>
+  <h1>Tistory API 요청 페이지</h1>
   <form>
     <label for="client_id">client_id:</label>
     <input type="text" id="client_id" name="client_id"><br><br>
@@ -17,35 +34,38 @@
     <label for="redirect_uri">redirect_uri:</label>
     <input type="text" id="redirect_uri" name="redirect_uri"><br><br>
     <input type="button" value="인증 코드 url로 이동" onclick="getAuthenticationCode()"><br><br>
-    <label for="code">Authorization Code:</label>
+    <label for="code">authorization code:</label>
     <input type="text" id="code" name="code"><br><br>
     <input type="button" value="Access Token 요청" onclick="getAccessTokenInCli()"><br><br>
+    <div id="tokenresponse"></div><br><br>
     <label for="access_token">access_token :</label>
     <input type="text" id="access_token" name="access_token"><br><br>
     <label for="blogName">blogName :</label>
     <input type="text" id="blogName" name="blogName"><br><br>
     <input type="button" value="카테고리 ID 들고오기" onclick="getCategoryID()">
+    <div id="response"></div>
   </form>
-  <div id="response"></div>
   <div class="instruction">
   <h2>API 요청 페이지 사용법</h2>
   <ol>
     <li>Tistory 개발자센터에 접속하여 애플리케이션 등록을 진행합니다.</li>
+    <li>주소 : <a href="https://www.tistory.com/guide/api/manage/register" target="_blank">https://www.tistory.com/guide/api/manage/register</a></li>
     <li>이때 서비스 URL,CallBack은 자신의 티스토리 주소를 활용합니다.</li>
     <li>주소 입력 예시 : https://블로그이름.tistory.com/</li>
-    <li>등록한 애플리케이션의 App ID와 Secret Key을 복사하여 API 요청 페이지의 "client_id"와 "client_secret" 입력창에 붙여넣습니다.</li>
-    <li>"redirect_uri" 입력창에는 Tistory 개발자센터에서 설정한 CallBack URI를 입력합니다.</li>
-    <li>"인증 코드 url로 이동" 버튼을 눌러 Tistory 계정으로 로그인한 후, 인증 코드(Authorization Code)를 발급받습니다.</li>
+    <li>등록한 애플리케이션의 App ID와 Secret Key을 복사하여 이 사이트의 "client_id"와 "client_secret" 입력창에 붙여넣습니다.</li>
+    <li>"redirect_uri" 입력창에는 Tistory 개발자센터에서 설정한 자신의 티스토리 주소를 입력합니다.</li>
+    <li>"인증 코드 url로 이동" 버튼을 눌러 Tistory 계정으로 로그인한 후, "허가하기"를 눌러 인증 코드(Authorization Code)를 발급받습니다.</li>
+    <li>인증 코드는 "허가하기"를 눌러 이동한 티스토리 블로그의 주소창에서 아래와 같은 형식으로 확인할 수 있습니다.</li>
    <li>https://블로그이름.com/?code=여기가_인증코드&state=anything</li> 
-    <li>발급된 인증 코드는 1시간 이내에만 사용가능하며 재사용 할 수 없습니다.</li>
-    
+    <li>발급된 인증 코드는 1시간 이내에만 사용가능하며 재사용 할 수 없습니다. 에러가 발생하면 재발급해 주세요</li>
     <li>발급받은 인증 코드를 API 요청 페이지의 "Authorization Code" 입력창에 입력합니다.</li>
     
     <li>"access_token" 입력창에는 앞서 발급받은 인증 코드로 access_token을 요청받아 복사하여 붙여넣습니다.</li>
     <li>"blogName" 입력창에는 자신의 Tistory 블로그 이름을 입력합니다.</li>
     <li>"카테고리 ID 들고오기" 버튼을 눌러 카테고리 ID를 확인할 수 있습니다.</li>
   </ol>
-  <p>※ API 요청 페이지에서 Access Token 요청 기능은 CORS 정책 등의 이유로 작동하지 않을 수 있습니다. 카테고리 ID를 확인하는 기능만을 이용하시길 권장합니다.</p>
+  <p>※ API 요청 페이지에서 Access Token 요청 기능은 CORS 정책 등의 이유로 작동하지 않을 수 있습니다.</p>
+  <p>※ 티스토리 api 문서 : <a href="https://tistory.github.io/document-tistory-apis/" target="_blank">https://tistory.github.io/document-tistory-apis/</a></p>
 </div>
 </body>
 
