--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -12,7 +12,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Tistory API 요청 페이지">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="">
+  <meta property="og:url" content="https://tistoryapi.netlify.app/">
   <meta property="og:description" content="Tistory API를 이용하여 블로그를 관리하는 페이지입니다.">
   <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/3522/3522666.png">
   
@@ -62,6 +62,7 @@
     
     <li>"access_token" 입력창에는 앞서 발급받은 인증 코드로 access_token을 요청받아 복사하여 붙여넣습니다.</li>
     <li>"blogName" 입력창에는 자신의 Tistory 블로그 이름을 입력합니다.</li>
+    <li>주소 입력 예시 : https://블로그이름.tistory.com/</li>
     <li>"카테고리 ID 들고오기" 버튼을 눌러 카테고리 ID를 확인할 수 있습니다.</li>
   </ol>
   <p>※ API 요청 페이지에서 Access Token 요청 기능은 CORS 정책 등의 이유로 작동하지 않을 수 있습니다.</p>
