--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -83,7 +83,7 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: process.env.API_KEY,
+    apiKey: window.env.API_KEY,
     authDomain: "officialpractice-bfcfa.firebaseapp.com",
     projectId: "officialpractice-bfcfa",
     storageBucket: "officialpractice-bfcfa.appspot.com",
