--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -27,6 +27,7 @@
 
 <body>
   <h1>Tistory API 요청 페이지</h1>
+  <h6>이 사이트는 티스토리 api를 사용하기 위해 필요한 access_token등을 개발에 친숙하지 않은 분들도 쉽게 발급할 수 있도록 만든 사이트입니다.</h2>
   <form>
     <label for="client_id">client_id:</label>
     <input type="text" id="client_id" name="client_id"><br><br>
