--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -22,7 +22,8 @@
   <meta name="twitter:title" content="Tistory API 요청 페이지">
   <meta name="twitter:description" content="Tistory API를 이용하여 블로그를 관리하는 페이지입니다.">
   <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/3522/3522666.png">
- 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7529335719399218"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
