--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -31,20 +31,20 @@
   <h6>이 사이트는 티스토리 api를 사용하기 위해 필요한 access_token등을 개발에 친숙하지 않은 분들도 쉽게 발급할 수 있도록 만든 사이트입니다.</h2>
   <form>
     <label for="client_id">client_id:</label>
-    <input type="text" id="client_id" name="client_id"><br><br>
+    <input type="text" id="client_id" name="client_id" placeholder="받은 App ID 입력"><br><br>
     <label for="client_secret">client_secret:</label>
-    <input type="text" id="client_secret" name="client_secret"><br><br>
+    <input type="text" id="client_secret" name="client_secret" placeholder="받은 Secret Key 입력"><br><br>
     <label for="redirect_uri">redirect_uri:</label>
-    <input type="text" id="redirect_uri" name="redirect_uri"><br><br>
+    <input type="text" id="redirect_uri" name="redirect_uri" placeholder="https://블로그이름.tistory.com 형식으로 입력"><br><br>
     <input type="button" value="인증 코드 url로 이동" onclick="getAuthenticationCode()"><br><br>
     <label for="code">authorization code:</label>
-    <input type="text" id="code" name="code"><br><br>
+    <input type="text" id="code" name="code" placeholder="https://블로그이름.tistory.com/?code=인증코드&state=anything 에서 인증코드 입력"><br><br>
     <input type="button" id="access-token-btn" value="Access Token 요청" onclick="getAccessTokenInCli()"><br><br>
     <div id="tokenresponse"></div><br><br>
     <label for="access_token">access_token :</label>
-    <input type="text" id="access_token" name="access_token"><br><br>
+    <input type="text" id="access_token" name="access_token" placeholder="받은 access_token 입력"><br><br>
     <label for="blogName">blogName :</label>
-    <input type="text" id="blogName" name="blogName"><br><br>
+    <input type="text" id="blogName" name="blogName" placeholder="https://블로그이름.tistory.com 에서 블로그이름 입력"><br><br>
     <input type="button" value="카테고리 ID 가져오기" id="category-btn" onclick="getCategoryID()">
 
     <div id="response"></div>
@@ -56,7 +56,7 @@
     <li>등록한 앱 화면의 App ID와 Secret Key을 복사하여 이 사이트의 "client_id"와 "client_secret" 입력창에 붙여넣습니다.</li>
     <li>이 사이트의 "redirect_uri" 입력창에 Tistory 개발자센터에서 설정했던 자신의 티스토리 주소를 입력합니다.</li>
     <li>"인증 코드 url로 이동" 버튼을 눌러 Tistory 계정으로 로그인한 후, "허가하기"를 눌러 인증 코드(Authorization Code)를 발급받습니다.</li>
-    <li> 발급된 인증 코드는 "허가하기"를 눌러 이동한 티스토리 블로그의 주소창에서 다음과 같은 형식으로 확인할 수 있습니다. (https://블로그이름.com/?code=여기가인증코드&state=anything) 발급된 인증 코드는 1시간 이내에만 사용가능하며, 재사용 할 수 없습니다.</li>
+    <li> 발급된 인증 코드는 "허가하기"를 눌러 이동한 티스토리 블로그의 주소창에서 다음과 같은 형식으로 확인할 수 있습니다. (https://블로그이름.tistory.com/?code=여기가인증코드&state=anything) 발급된 인증 코드는 1시간 이내에만 사용가능하며, 재사용 할 수 없습니다.</li>
     <li>발급받은 인증 코드를 이 사이트의 "Authorization Code" 입력창에 입력합니다.</li>
     <li>"Access Token 요청" 버튼을 눌러 아래에 access_token=여기가발급된토큰이 나타날 때까지 기다립니다. 만약 에러가 발생하면 인증코드를 발급하는 4.의 과정부터 다시 진행해야 합니다.</li>
     <li>"access_token" 입력창에 발급받은 access_token을 복사하여 붙여넣습니다.</li>
