--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -38,7 +38,7 @@
     <input type="text" id="redirect_uri" name="redirect_uri" placeholder="https://블로그이름.tistory.com 형식으로 입력"><br><br>
     <input type="button" value="인증 코드 url로 이동" onclick="getAuthenticationCode()"><br><br>
     <label for="code">authorization code:</label>
-    <input type="text" id="code" name="code" placeholder="https://블로그이름.tistory.com/?code=인증코드&state=anything 에서 인증코드 입력"><br><br>
+    <input type="text" id="code" name="code" placeholder="허가하기 클릭후 주소창의 https://블로그이름.tistory.com/?code=인증코드&state=anything 에서 인증코드 입력"><br><br>
     <input type="button" id="access-token-btn" value="Access Token 요청" onclick="getAccessTokenInCli()"><br><br>
     <div id="tokenresponse"></div><br><br>
     <label for="access_token">access_token :</label>
@@ -61,7 +61,7 @@
     <li>"Access Token 요청" 버튼을 눌러 아래에 access_token=여기가발급된토큰이 나타날 때까지 기다립니다. 만약 에러가 발생하면 인증코드를 발급하는 4.의 과정부터 다시 진행해야 합니다.</li>
     <li>"access_token" 입력창에 발급받은 access_token을 복사하여 붙여넣습니다.</li>
     <li>"blogName" 입력창에는 자신의 Tistory 블로그 이름을 입력합니다. 블로그 이름 예시 : https://블로그이름.tistory.com/</li>
-    <li>"카테고리 ID 들고오기" 버튼을 눌러 카테고리 ID를 확인할 수 있습니다.</li>
+    <li>"카테고리 ID 들고오기" 버튼을 눌러 각 카테고리 이름에 대응하는 카테고리 ID를 확인할 수 있습니다.</li>
     <li>access_token과 카테고리 ID를 통해 티스토리의 글쓰기,수정하기등의 api를 이용할 수 있습니다.</li>
   </ol>
   <p>※ 티스토리 api 문서 : <a href="https://tistory.github.io/document-tistory-apis/" target="_blank">https://tistory.github.io/document-tistory-apis/</a></p>
