--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -66,6 +66,11 @@
   </ol>
   <p>※ 티스토리 api 문서 : <a href="https://tistory.github.io/document-tistory-apis/" target="_blank">https://tistory.github.io/document-tistory-apis/</a></p>
 </div>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-9XfP02XwZiFmjv6n"
+data-ad-width = "300"
+data-ad-height = "250"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </body>
 
 <script type="module">
