--- a/tistoryapi/index.html
+++ b/tistoryapi/index.html
@@ -39,6 +39,7 @@
     <input type="button" value="인증 코드 url로 이동" onclick="getAuthenticationCode()"><br><br>
     <label for="code">authorization code:</label>
     <input type="text" id="code" name="code" placeholder="허가하기 클릭후 주소창의 https://블로그이름.tistory.com/?code=인증코드&state=anything 에서 인증코드 입력"><br><br>
+    <p>한 번만 눌러주세요!</p>
     <input type="button" id="access-token-btn" value="Access Token 요청" onclick="getAccessTokenInCli()"><br><br>
     <div id="tokenresponse"></div><br><br>
     <label for="access_token">access_token :</label>
